# ProductionLineUi

./: .gitmodules  README.md
production_line_ui/: .gitignore  CMakeLists.txt  README.md  json_parser.cpp  json_parser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mqtt_client.cpp  mqtt_client.h
production_line_ui/build_unit_test/: CMakeCache.txt  cmake_install.cmake
production_line_ui/include/: json_parser.h  main_application.h  mainwindow.h  mqtt_client.h  mqtt_main_window_bridge.h  sqlite.hpp  uiupdater.h
production_line_ui/json_examples/: camera1.json  camera2.json  camera3.json  line1.json  line2.json  line3.json
production_line_ui/resources/: resources.qrc
production_line_ui/src/: json_parser.cpp  main_application.cpp  mainwindow.cpp  mqtt_client.cpp  mqtt_main_window_bridge.cpp  sqlite.cpp  uiupdater.cpp
production_line_ui/test/json_examples/: camera1.json  line1.json  line2.json
production_line_ui/unit_test/: CMakeLists.txt  unit_tests.cpp
